--- a/ViewAulus/Views/Customers/Create.cshtml
+++ b/ViewAulus/Views/Customers/Create.cshtml
@@ -39,7 +39,7 @@
                                                     <li><a href="#tab1" class="tab-1 active">General</a></li>
                                                     <li><a href="#tab2" class="tab-2">Defaults</a></li>
                                                     <li><a href="#tab3" class="tab-3">Address</a></li>
-                                                    <li><a href="#tab4" class="tab-4">Relationships</a></li>
+                                                  <!--  <li><a href="#tab4" class="tab-4">Relationships</a></li>-->
                                                     <li class="last"><a href="#tab5" class="tab-5">Shipping Information</a></li>
                                                 </ul>
                                             </div>
@@ -55,9 +55,9 @@
 
                                                                     </div>
                                                                     
-                                                                    <div class="col little">
+                                                                    <div class="col">
                                                                         <label>Status</label>
-                                                                        <select class="form-control little ">
+                                                                        <select class="form-control  ">
                                                                             <option value="true">Active</option>
                                                                             <option value="false">Inactive</option>
                                                                         </select>
@@ -319,52 +319,13 @@
                                                                         <option>UPS</option>
                                                                     </select>
                                                                 </div>
-                                                                <div class="form-group">
-                                                                    <select class="form-control">
-                                                                        <option>FEDEX FREIGHT</option>
-                                                                    </select>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <select class="form-control">
-                                                                        <option>UPS INCLUDE QUOTE</option>
-                                                                    </select>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <select class="form-control">
-                                                                        <option>UPS N.D.A INC QUOT</option>
-                                                                    </select>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <select class="form-control">
-                                                                        <option>HOT RUSH CALL SAL</option>
-                                                                    </select>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <select class="form-control">
-                                                                        <option>GIVE TO JILL</option>
-                                                                    </select>
-                                                                </div>
+                                                               
                                                             </div>
                                                             <div class="shipping-box pdlft">
                                                                 <span class="label">Account #</span>
                                                                 <div class="form-group">
                                                                     <input type="text" class="form-control" />
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" />
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" />
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" />
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" />
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" />
-                                                                </div>
+                                                                </div>                                                           
                                                             </div>
                                                         </div>
                                                     </div>
@@ -378,7 +339,7 @@
                                                                 <th width="6%">Order#</th>
                                                                 <th width="8%">Item</th>
                                                                 <th width="10%">Description</th>
-                                                                <th width="9%">Lot#</th>
+                                          http://localhost:58720/Customers/create#tab5                      <th width="9%">Lot#</th>
                                                                 <th width="9%">Stock</th>
                                                                 <th width="9%">Qty Ship</th>
                                                                 <th width="9%">Unit</th>
