--- a/ViewAulus/Views/ColorMatchRequests/Create.cshtml
+++ b/ViewAulus/Views/ColorMatchRequests/Create.cshtml
@@ -497,7 +497,7 @@
 
                     <div class="panel-container spacer-20">
                         <div class="color-match">
-                            <table class="gn-table eq-table">
+                            <table class="gn-table">
                                 <thead>
                                     <tr>
                                         <th class="last">Sample Concentrate</th>
@@ -576,7 +576,7 @@
 
 
                             <!-- EXPOSURE -->
-                            <table class="gn-table eq-table">
+                            <table class="gn-table">
                                 <thead>
                                     <tr>
                                         <th class="last">Exposure</th>
@@ -613,7 +613,7 @@
                             </table>
 
                             <!-- PURPOSE FOR MATCH -->
-                            <table class="gn-table eq-table">
+                            <table class="gn-table ">
                                 <thead>
                                     <tr>
                                         <th class="last"> Purpose For Match</th>
@@ -649,7 +649,7 @@
 
                             <!-- SPECIAL ADDITIVIES -->
 
-                            <table class="gn-table eq-table">
+                            <table class="gn-table ">
                                 <thead>
                                     <tr>
                                         <th class="last">Special Additives</th>
@@ -722,7 +722,7 @@
 
                             <!-- CUSTOMER MAJOR CONCERN -->
 
-                            <table class="gn-table  eq-table">
+                            <table class="gn-table">
                                 <thead>
                                     <tr>
                                         <th class="last">Customer Major Concern</th>
@@ -768,7 +768,7 @@
 
                             <!-- REGULARITY REQUIREMENT -->
 
-                            <table class="gn-table  eq-table">
+                            <table class="gn-table">
                                 <thead>
                                     <tr>
                                         <th class="last">Regularity Requirement</th>
@@ -808,7 +808,7 @@
 
                             <!-- PROCESSING INFORMATION -->
 
-                            <table class="gn-table eq-table">
+                            <table class="gn-table">
                                 <thead>
                                     <tr>
                                         <th class="last">Processing Information</th>
@@ -874,7 +874,7 @@
                      
                     <div class="panel-container spacer-20">
                         <div class="color-match">
-                            <table class="gn-table eq-table">
+                            <table class="gn-table">
                                 <thead>
                                     <tr>
                                         <th class="last">Product Information</th>
@@ -917,7 +917,7 @@
                     
                     <div class="panel-container spacer-20">
                         <div class="color-match">
-                            <table class="gn-table eq-table">
+                            <table class="gn-table">
                                 <thead>
                                     <tr>
                                         <th class="last">Shipping Information</th>
