--- a/ViewAulus/Views/Employees/Create.cshtml
+++ b/ViewAulus/Views/Employees/Create.cshtml
@@ -81,25 +81,25 @@
                 <div class="fields-row">
                     <div class="fields-bar">
                         <div class="form-group">
-                            <div class="col" style="width: 565px;">
+                            <div class="col">
                                 <label class="control-label " for="Address">Address</label>
-                                <input class="form-control text-box single-line" id="Address" name="Address" type="text" value="" />
+                                <input  style="width: 555px"class="form-control text-box single-line" id="Address" name="Address" type="text" value="" />
                             </div>
                         </div>
                     </div>
                 </div>
-
+                
 
                 <div class="fields-row">
                     <div class="fields-bar">
                         <div class="form-group">
-                            <div class="col" style="width: 300px;">
+                            <div class="col">
                                 <label class="control-label " for="City">City</label>
-                                <input class="form-control text-box single-line" id="City" name="City" type="text" value="" />
+                                <input class="form-control address-box text-box single-line" id="City" name="City" type="text" value="" />
                             </div>
-                            <div class="col" style="width: 75px;">
+                            <div class="col">
                                 <label class="control-label" for="State">State</label>
-                                <input class="form-control text-box single-line" id="State" name="State" type="text" value="" />
+                                <input  style="width:75px;" class="form-control text-box single-line" id="State" name="State" type="text" value="" />
                             </div>
                             <div class="col">
                                 <label class="control-label " for="ZipCode">Zip Code</label>
