--- a/ViewAulus/Views/Categories/Tela2.cshtml
+++ b/ViewAulus/Views/Categories/Tela2.cshtml
@@ -27,7 +27,9 @@
 
             </ul>
         </div>
-        <div class="fields-row">
+
+     <div class="padding-container">
+        <div class="fields-row ">
             <div class="fields-bar">
                 <div class="form-group">
                     <div class="col">
@@ -45,6 +47,7 @@
                 </div>
             </div>
         </div>
+
 
         <h2>Formula Card</h2>
         <h3>&nbsp;</h3>
@@ -215,4 +218,5 @@
             </tbody>
         </table>
     </div>
+ </div>
 </div>
