--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -35,8 +35,9 @@
             <a href='#'>Table</a>
             <ul>
                 <li><a routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Category</a></li>
+                <li><a routerLink="/carriers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Carrier</a></li>
                 <!--<li>@Html.ActionLink("Category", "index", "Categories")</li>
-                <li>@Html.ActionLink("Carrier", "index", "Carriers")</li>
+                
                 <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
                 <li>@Html.ActionLink("Packaging", "index", "Packagings")</li>
                 <li>@Html.ActionLink("Pellet", "index", "Pellets")</li>
