--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -36,6 +36,7 @@
             <ul>
                 <li><a routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Category</a></li>
                 <li><a routerLink="/carriers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Carrier</a></li>
+                <li><a routerLink="/opacities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Opacity</a></li>
                 <!--<li>@Html.ActionLink("Category", "index", "Categories")</li>
                 
                 <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
